--- a/index.html
+++ b/index.html
@@ -36,11 +36,32 @@ main {
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <title>خرید فیلترشکن v2ray کانفیگ V2RAYNG خرید VPN ویتوری ویتوری 20 V2ray20 خرید فیلترشکن خرید فیلتر شکن قوی اندروید + آیفون</title>
+  <title>خرید فیلترشکن قوی اندروید + آیفون</title>
 </head>
 <body>
   <header>
-    <h1>خرید فیلترشکن v2ray کانفیگ V2RAYNG خرید VPN ویتوری ویتوری 20 V2ray20 خرید فیلترشکن خرید فیلتر شکن قوی اندروید + آیفون</h1>
+    <h1>خرید فیلترشکن خرید فیلتر شکن قوی اندروید + آیفون</h1>
+    <p>خرید فیلترشکن v2ray کانفیگ V2RAYNG خرید VPN ویتوری ویتوری V2ray</p>
+    <p>
+      اگر به دنبال حریم خصوصی و امنیت آنلاین خود هستید، خرید یک فیلترشکن قوی و یا یک وی پی ان مطمئنا یک گزینه خوب برای شماست. V2rayNG و NapsterneTV از جمله ابزارهای محبوبی هستند که امکان دسترسی امن به اینترنت را فراهم می‌کنند.
+</p>   <p>
+V2rayNG یک نرم افزار فیلترشکن قدرتمند است که قابلیت‌های پیشرفته‌ای ارائه می‌دهد و به شما این امکان را می‌دهد که به طور ایمن و پنهانی از اینترنت استفاده نمایید. از طرف دیگر، NapsterneTV یک سرویس وی پی ان (VPN) سریع و قوی است که به شما امکان می‌دهد تا به صورت امن از رویه‌های محتوایی محدود شده و مسدود شده دسترسی پیدا کنید.
+</p><p>
+با بهره‌گیری از این ابزارها، شما می‌توانید به آسانی از آزادی اطلاعات و محتوای دلخواه خود لذت ببرید و در عین حال از امنیت آنلاین خود مطمئن شوید.</p>
+<p>
+بنابراین، اگر به دنبال ابزارهای قدرتمندی برای حفظ حریم خصوصی اطلاعات خود هستید، خرید یک فیلترشکن قوی مانند V2rayNG و یا استفاده از یک وی پی ان پرسرعت مانند NapsterneTV می‌تواند گزینه‌ای مناسب برای شما باشد.
+    </p>
+     <article>
+    <p>
+      ویتوری یا V2ray یکی از فیلترشکن‌های پرقدرت و پرافزوده در دنیای اینترنت است. این فیلترشکن با عملکرد بسیار قدرتمند و قابلیت‌های پیشرفته‌ای که ارائه می‌دهد، به شما این امکان را می‌دهد که به طور امن و محرمانه به اینترنت دسترسی پیدا کنید.
+    </p>
+    <p>
+      با ویتوری، می‌توانید از رویه‌ها و فیلترینگ‌های اینترنتی عبور کرده و به آسانی به منابع غیرقابل دسترس دست یابید، همچنین امکان دسترسی به منابع خارجی و مسدود شده نیز از دیگر ویژگی‌های این فیلترشکن است.
+    </p>
+    <p>
+      ویتوری با پشتیبانی از پروتکل‌های امنیتی مانند TLS (نسخه کُدشده HTTPS) و توانایی انتخاب و تنظیم پراکسی‌ها و روتینگ‌های پیچیده، از لحاظ امنیتی یکی از بهترین انتخاب‌ها برای حفظ حریم شخصی و دسترسی به اطلاعات محرمانه می‌باشد.
+    </p>
+  </article>
   </header>
   <main>
     <p>محتوای وب سایت در زبان فارسی قرار داده می‌شود.</p>
