--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
     <p>خرید و فروش اکانت های وی پی ان و فیلترشکن V2rayNG و خرید فیلترشکن ویتوری: نسل جدیدی از VPN ها، کانفیگ های وی تو ری v2ray رایگان پر سرعت v2rayng, NapsternetV, fair, v2box, foxray.</p>
       <p>اگر به دنبال سرویس های اقتصادی ویتوری و نپسترنت هستید از لینک های زیر اقدام نمایید:</p>
     <p>خرید اکانت V2ray در حال حاضر بهترین سرویس و روش برای استفاده از اینترنت آزاد می باشد. این سرویس های فوقلعاده پرسرعت قوی و ارزان قیمت را می توانید از ما تهیه کنید.</p>
-    <p>کلیک کنید:<a href="https://t.me/v2rayngsup">
-      ارسال پیام به پشتیبانی در تلگرام آیدی @v2rayngsup</a></p>
+    <p>کلیک کنید:<a href="https://t.me/vrayngsup">
+      ارسال پیام به پشتیبانی در تلگرام آیدی @vrayngsup</a></p>
       خرید فیلترشکن پولی و ماهانه از ربات V2rayNG</a></p>
       خرید فیلترشکن پولی و ماهانه</a></p>
     <h2>خرید کانفیگ napsternetv</h2>
@@ -54,11 +54,9 @@
     <p>اگر قصد خرید فیلترشکن قوی برای اندروید، ویندوز، آیفون را دارید می توانید از طریق ربات تلگرام، سایت، کانال و آیدی پشتیبانی فیلترشکن NapsterneTV و V2rayNG اقدام کنید</p>
     <p>اگر به دنبال سرویس های اقتصادی ویتوری و نپسترنت هستید از لینک های زیر اقدام نمایید:</p>
     <p> مشاهده توضیحات در سایت خرید فیلترشکن قوی</p>
-    <p>
-      ارسال پیام به پشتیبانی در تلگرام آیدی</p>
-       <p>کلیک کنید:<a href="https://t.me/s/ai_duet" rel="follow">
-      خرید فیلترشکن پولی و ماهانه از ربات V2rayNG</a></p>
-      <p>کلیک کنید:<a href="https://t.me/v2rayngsup" rel="follow"> بهترین سایت
+    <p> ارسال پیام به پشتیبانی در تلگرام آیدی</p>
+     <p> خرید فیلترشکن پولی و ماهانه V2rayNG</p>
+      <p>کلیک کنید:<a href="https://t.me/vrayngsup" rel="follow"> بهترین سایت
       خرید فیلترشکن پولی و ماهانه</a></p>
 <h2>&nbsp;لیست قیمت خرید انواع فیلترشکن و کانفیگ های ویتوری</h2> <p>&nbsp;سرویس ویژه <strong>خرید فیلتر شکن V2ray</strong> &nbsp;نامحدود آلمان با قابلیت اجرا در برنامه v2rayng, NapsternetV ,fair ,v2box ,foxray</p> <p>✅یک ماهه &nbsp;نامحدود تک کاربره ۱۳۱ تومان&nbsp;<br />✅یک ماهه نامحدود دو کاربره ۱۷۱ تومان<br /> ✅سه ماهه نامحدود تک کاربره ۲۹۱ تومان<br />✅سه ماهه نامحدود دو کاربره ۳۳۹ تومان</p><p style="text-align: center;"> <span style="font-size:16px;"><strong> <a href="https://t.me/V2rayNG_gptbot"> <span style="background-color:#f1c40f;">خرید راحت و آسان فوری در ربات تلگرام</span></a></strong></span></p><p> </p> <p style="text-align: center;"><span style="font-size:16px;"> <a href="https://t.me/v2rayngsup"><u><strong><span style="background-color:#ecf0f1;">اینجا کلیک کنید و سفارش دهید!</span></strong></u></a></span></p><p> </p><p><strong>(تعداد ۲،۴،۵،۶ماهه و یکساله) به درخواست کاربر ساخته خواهد شد</strong></p><h2>خرید VPN سرویس اقتصادی V2rayNG&nbsp;</h2><p>✅<strong>یکماهه نامحدود تک کاربر ۹۱ تومان</strong><br />خرید فیلتر شکن پولی&nbsp;ویتوری مولتی سرور V2rayNG</p><p>قابل استفاده در برنامه های Fair, v2box ,foxray xray vpn, V2rayNG</p><p>قابلیت اتصال ده کشور</p><p>آلمان، هلند، فنلاند، ترکیه، لهستان، آمریکا، نروژ، روسیه، اوکراین.</p><p style="text-align: center;"><span style="font-size:18px;">پیام جهت سفارش:</span><br /><span style="font-size:20px;"><strong>تلگرام: <a href="https://t.me/s/ai_duet">@ai_duet</a></strong></span></p><p style="text-align: center;"></p><h4>قابل نمایش حجم و زمان در برنامه</h4><p>✅ یک ماهه سرویس حجمی تک کاربره ۱۰۹ تومان (حجم استفاده ۵۰ گیگ)&nbsp;<br />✅ یکماهه سرویس حجمی &nbsp;دو کاربره ۱۵۹ تومان (حجم استفاده 80 گیگ)&nbsp;<br /> ✅ یکماهه‌سرویس۴ کاربره ۲۱۹تومان (150 گیگ)&nbsp;<br /> ✅ سه ماهه تک کاربر ۲۵۰ هزار تومان (150 گیگ)&nbsp;</p><p> (تعداد ۲،۴،۵،۶ماهه و یکساله) به درخواست کاربر ساخته خواهد شد</p><h3>🔴خرید فیلتر شکن وایرگارد WireGuard</h3> <p>✅یک ماهه سرویس نامحدود حجمی &nbsp;تک کاربره ۱۳۵ تومان<br />✅ یک ماهه سرویس نامحدود حجمی دو کاربره ۲۳۱ تومان</p> <h3>🔴سرویس فیلتر شکن سیسکو cisco</h3><p>✅یک ماهه سرویس نامحدود حجمی تک کاربره ۱۳۹ تومان<br /> ✅ یک ماهه سرویس نامحدود حجمی دو کاربره ۲۳۹ تومان</p><h3>🔴خرید فیلتر شکن اوپن وی پی ان OpenVPN&nbsp;</h3> <p>✅یکماهه سرویس نامحدود حجمی &nbsp;تک کاربره ۱۳۱ تومان<br /> ✅ یکماهه سرویس نامحدود حجمی &nbsp;دو کاربره ۲۲۱ تومان<br />✅ سه ماهه سرویس نامحدود حجمی دو کاربره ۳۱۹ تومان</p> <p>✅ شش ماهه سرویس نامحدود حجمی ۵۹۹ تومان</p><p>(دوکاربره استفاده همزمان دو کاربر از دو سیستم متفاوت )</p> <p style="text-align: center;"><span style="font-size:18px;">پیام جهت سفارش:</span><br /> <span style="font-size:20px;"><strong>تلگرام: <a href="https://t.me/v2rayngsup">@v2rayngsup</a></strong> </span></p>
 <p>خرید شکن v2ray,خرید شکن برای ویندوز,خرید شکن قوی,خرید شکن پولی,خرید شکن برای ایفون,خرید شکن ارزان,خرید شکن برای مودم,خرید شکن هات اسپات شیلد,خرید شکن v2rayng,خرید شکن سیسکو برای ایفون
