--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
     <p>خرید و فروش اکانت های وی پی ان و فیلترشکن V2rayNG و خرید فیلترشکن ویتوری: نسل جدیدی از VPN ها، کانفیگ های وی تو ری v2ray رایگان پر سرعت v2rayng, NapsternetV, fair, v2box, foxray.</p>
       <p>اگر به دنبال سرویس های اقتصادی ویتوری و نپسترنت هستید از لینک های زیر اقدام نمایید:</p>
     <p>خرید اکانت V2ray در حال حاضر بهترین سرویس و روش برای استفاده از اینترنت آزاد می باشد. این سرویس های فوقلعاده پرسرعت قوی و ارزان قیمت را می توانید از ما تهیه کنید.</p>
-    <p>کلیک کنید:<a href="https://t.me/vrayngsup">
-      ارسال پیام به پشتیبانی در تلگرام آیدی @vrayngsup</a></p>
+    <p>کلیک کنید:<a href="https://t.me/v2rayngsup">
+      ارسال پیام به پشتیبانی در تلگرام آیدی @v2rayngsup</a></p>
       خرید فیلترشکن پولی و ماهانه از ربات V2rayNG</a></p>
       خرید فیلترشکن پولی و ماهانه</a></p>
     <h2>خرید کانفیگ napsternetv</h2>
@@ -56,7 +56,7 @@
     <p> مشاهده توضیحات در سایت خرید فیلترشکن قوی</p>
     <p> ارسال پیام به پشتیبانی در تلگرام آیدی</p>
      <p> خرید فیلترشکن پولی و ماهانه V2rayNG</p>
-      <p>کلیک کنید:<a href="https://t.me/vrayngsup" rel="follow"> بهترین سایت
+      <p>کلیک کنید:<a href="https://t.me/v2rayngsup" rel="follow"> بهترین سایت
       خرید فیلترشکن پولی و ماهانه</a></p>
    <h2>لیست قیمت خرید انواع فیلترشکن و کانفیگ های ویتوری</h2>
 <p>سرویس ویژه <strong>خرید فیلتر شکن V2ray</strong>  نامحدود آلمان با قابلیت اجرا در برنامه v2rayng, NapsternetV ,fair ,v2box ,foxray</p>
@@ -64,8 +64,8 @@
 <p>✅یک ماهه نامحدود دو کاربره ۱۷۱ تومان</p>
 <p>✅سه ماهه نامحدود تک کاربره ۲۹۱ تومان</p>
 <p>✅سه ماهه نامحدود دو کاربره ۳۳۹ تومان</p>
-<p style="text-align: center;"><strong><a href="https://t.me/vrayngsup" rel="follow" target="_blank">خرید راحت و آسان فوری در تلگرام</a></strong></p>
-<p style="text-align: center;"><a href="https://t.me/s/tanhanet" rel="follow" target="_blank"><u><strong>اینجا کلیک کنید و سفارش دهید!</strong></u></a></p>
+<p style="text-align: center;"><strong><a href="https://t.me/v2rayngsup" rel="follow" target="_blank">خرید راحت و آسان فوری در تلگرام</a></strong></p>
+<p style="text-align: center;"><a href="https://t.me/v2rayng_gptbot" rel="follow" target="_blank"><u><strong>اینجا کلیک کنید و سفارش دهید!</strong></u></a></p>
 <p>&nbsp;</p>
 <p><strong>(تعداد ۲،۴،۵،۶ماهه و یکساله) به درخواست کاربر ساخته خواهد شد</strong></p>
 <h2>خرید VPN سرویس اقتصادی V2rayNG</h2>
@@ -74,7 +74,7 @@
 <p>قابل استفاده در برنامه های Fair, v2box ,foxray xray vpn, V2rayNG</p>
 <p>✅قابلیت اتصال ده کشور:</p>
 <p>آلمان، هلند، فنلاند، ترکیه، لهستان، آمریکا، نروژ، روسیه، اوکراین.</p>
-<p>پیام جهت سفارش در <strong>تلگرام: <a href="https://t.me/s/tanhanet" rel="follow" target="_blank">@tanhanet</a></strong></p>
+<p>پیام جهت سفارش در <strong>تلگرام: <a href="https://t.me/v2rayng_gptbot" rel="follow" target="_blank">@tanhanet</a></strong></p>
 <h4>قابل نمایش حجم و زمان در برنامه</h4>
 <p>✅ یک ماهه سرویس حجمی تک کاربره ۱۰۹ تومان (حجم استفاده ۵۰ گیگ)</p>
 <p>✅ یکماهه سرویس حجمی  دو کاربره ۱۵۹ تومان (حجم استفاده 80 گیگ)</p>
@@ -94,7 +94,7 @@
 <p>✅ شش ماهه سرویس نامحدود حجمی ۵۹۹ تومان</p>
 <p>(دوکاربره استفاده همزمان دو کاربر از دو سیستم متفاوت )</p>
 <p>پیام جهت سفارش:</p>
-<p><strong>تلگرام: <a href="https://t.me/vrayngsup" rel="follow" target="_blank">@vrayngsup</a></strong></p>
+<p><strong>تلگرام: <a href="https://t.me/v2rayngsup" rel="follow" target="_blank">@v2rayngsup</a></strong></p>
   </main>
 </body>
 </html>
